MODINV-1324: Add dependency on mod-inventory-storage-dto (#907)